<resources>

    <string name="app_name">Morning Alarm</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Morning Alarm</string>
    <string name="emptyString">No alarms</string>
    <string name="preferences_title">Alarm Settings</string>
    <string name="description_title">Description</string>
    <string name="time_title">Time</string>
    <string name="day_of_week_title">Days of week</string>
    <string name="duration_title">Duration</string>
    <string name="wake_up_mode_title">Wake up mode</string>
    <string name="save_button_title">Save</string>
    <string name="discard_button_title">Discard changes</string>
    <string-array name="days_of_week_array">
        <item>All</item><item >Sunday</item>
        <item >Monday</item>
        <item >Tuesday</item>
        <item >Wednesday</item>
        <item >Thursday</item>
        <item >Friday</item>
        <item >Saturday</item>
        
    </string-array>
    <string-array name="duration_array">
        <item >one day</item>
        <item >one week</item>
        <item >one month</item>
        <item >one year</item>
        <item >limitless</item>
    </string-array>
    <string-array name="wake_up_mode_array">
        <item >simple</item>
        <item >math test</item>
        <item >reaction test</item>
        <item >logic test</item>
        <item >qr or barcode</item>
    </string-array>
    <string-array name="days_of_week_values"><item>#ALL#</item>
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        
    </string-array>
    <string-array name="duration_values">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
    </string-array>
    <string-array name="wake_up_mode_values">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
    </string-array>
    <string name="ring_tone_title">Ringtone</string>
    <string name="def_value_description">New alarm</string>
    <string name="delete_option_string">Delete alarm</string>
    <string name="title_for_math_test_view">Please write the right answer</string>
    <string name="math_test_solved">Solved</string>
    <string name="option_menu_delete_all_option_title">Delete all alarms</string>
    <string name="snooze_button_title">Snooze</string>
    <string name="cancel_button">Cancel</string>

</resources>